# tiny-cache

./: .coveragerc  .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  Taskfile.yml  cache.proto  cache_store.py  config.py  docker-compose.test-deps.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  server.py
.github/workflows/: ci.yml
docs/: TEST_README.md  api-contract.md  architecture.md  code-review.md  codebase.md  kubernetes-deployment.yaml  specification.md  todo-design-and-readability.md  todo-errors-and-reliability.md  todo-features.md
docs/session_logs/: 2026-03-08_session_002.md
tests/: __init__.py  test_cache_entry.py  test_cache_store.py  test_hex_architecture.py  test_store_contract.py
tests/concurrency/: test_memory_store_concurrency.py
tests/fixtures/tls/: server.crt  server.key
tests/integration/: test_cli.py  test_grpc_health.py  test_grpc_service.py  test_grpc_tls.py  test_http_health.py
tests/integration/app/: test_grpc_health.py  (+3 more)
tiny_cache/: __init__.py  __main__.py  cache_store.py  cli.py  config.py  main.py  request_context.py  server.py
tiny_cache/application/: __init__.py  ports.py  request_context.py  results.py  service.py
tiny_cache/domain/: __init__.py  constraints.py  validation.py
tiny_cache/infrastructure/: __init__.py  config.py  logging.py  memory_store.py  memory_store_cleanup.py  memory_store_models.py  protobuf.py  sqlite_store.py  store_factory.py  tls.py
tiny_cache/transport/: __init__.py  active_requests.py
(+24 files in other folders)
